--- a/src/template.html
+++ b/src/template.html
@@ -2,23 +2,23 @@
 <html lang="it">
   <head>
 		<meta charset="utf-8">
-		<title>🚴 Ferrara a Domicilio</title>
-		<meta name="title" content="🚴‍♂️ Ferrara a Domicilio">
-		<meta name="description" content="Tutte le aziende che effettuano consegne a domicilio in provincia di Ferrara">
+		<title>🚴 Montoro a Domicilio</title>
+		<meta name="title" content="🚴‍♂️ Montoro a Domicilio">
+		<meta name="description" content="Tutte le aziende che effettuano consegne a domicilio a Montoro (AV)">
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://ferraradomicilio.it/">
-		<meta property="og:title" content="🚴‍♂️ Ferrara a Domicilio">
-		<meta property="og:description" content="Tutte le aziende che effettuano consegne a domicilio in provincia di Ferrara">
-		<meta property="og:image" content="/assets/images/ferraradomicilio_og_image.png">
+		<meta property="og:url" content="https://montoroadomicilio.it/">
+		<meta property="og:title" content="🚴‍♂️ Montoro a Domicilio">
+		<meta property="og:description" content="Tutte le aziende che effettuano consegne a domicilio a Montoro (AV)">
+		<meta property="og:image" content="/assets/images/montoroadomicilio_og_image.png">
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:url" content="https://ferraradomicilio.it/">
-		<meta property="twitter:title" content="🚴‍♂️ Ferrara a Domicilio">
-		<meta property="twitter:description" content="Tutte le aziende che effettuano consegne a domicilio in provincia di Ferrara">
-		<meta property="twitter:image" content="/assets/images/ferraradomicilio_og_image.png">
+		<meta property="twitter:url" content="https://montoroadomicilio.it/">
+		<meta property="twitter:title" content="🚴‍♂️ Montoro a Domicilio">
+		<meta property="twitter:description" content="Tutte le aziende che effettuano consegne a domicilio a Montoro (AV)">
+		<meta property="twitter:image" content="/assets/images/montoroadomicilio_og_image.png">
 
 		<link rel="apple-touch-icon" sizes="57x57" href="/assets/images/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="/assets/images/apple-icon-60x60.png">
